--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Isometric Game Prototype</title>
+    <title>My Three.js Project</title>
 </head>
 <body>
-  <canvas id="game-canvas" width="600" height="400"></canvas>
-  <script src="game.js"></script>
+    <script type="module" src="cannon.min.js"></script>
+    <script type="module" src="game.js"></script>
 </body>
 </html>
