--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>My Three.js Project</title>
 </head>
 <body>
+    <canvas id="c"></canvas>
     <script type="module" src="cannon.min.js"></script>
-    <script type="module" src="game.js"></script>
+    <script src="game.js"></script>
 </body>
 </html>
