--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <canvas id="c"></canvas>
-    <script type="module" src="game.js"></script>
+    <script type="module" src="./game.js"></script>
 </body>
 </html>
