--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       {
         "imports": {
           "three": "https://unpkg.com/three@<version>/build/three.module.js"
+          "three/addons/": "https://unpkg.com/three@<version>/examples/jsm/"
         }
       }
     </script>
