--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script type="importmap">
       {
         "imports": {
-          "three": "https://unpkg.com/three@0.148.0/build/three.module.js"
+          "three": "https://unpkg.com/three@0.148.0/build/three.module.js",
           "three/addons/": "https://unpkg.com/three@0.148.0/examples/jsm/"
         }
       }
