--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         camera.position.set(10, 10, 10);
         camera.lookAt(character.position);
 
-        var renderer = new THREE.WebGLRenderer(canvas);
+        var renderer = new THREE.WebGLRenderer({canvas});
         renderer.setSize(window.innerWidth, window.innerHeight);
         document.body.appendChild(renderer.domElement);
 
