--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
         const canvas = document.getElementById("c");
-        const world = new CANNON.World();
+        let world = new CANNON.World();
 
 
         // Create the ground as a PlaneBufferGeometry with a MeshBasicMaterial
