--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 
         // Create the ground as a PlaneBufferGeometry with a MeshBasicMaterial
-        var groundGeometry = new THREE.PlaneBufferGeometry(10, 10);
+        var groundGeometry = new THREE.PlaneGeometry(10, 10);
         var groundMaterial = new THREE.MeshBasicMaterial({ color: 0x00ff00 });
         var ground = new THREE.Mesh(groundGeometry, groundMaterial);
 
