--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
 
 <body>
     <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
-
+    <scirpt src="cannon.min.js"></scirpt>
     <script type="importmap">
       {
         "imports": {
-          "cannon": "cannon.min.js",
           "three": "https://unpkg.com/three@0.148.0/build/three.module.js",
           "three/addons/": "https://unpkg.com/three@0.148.0/examples/jsm/"
         }
