--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
         import * as THREE from 'three';
         import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
 
-
-
+        const { World, Body, Box, Plane, Vec3 } = CANNON;
         const canvas = document.getElementById("c");
         var world = new CANNON.World();
 
