--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </script>
     <canvas id="c"></canvas>
     <script type="module">
+        import * as CANNON from 'cannon';
         import * as THREE from 'three';
         import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
 
