--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
     <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
-    <scirpt src="cannon.min.js"></scirpt>
+
     <script type="importmap">
       {
         "imports": {
@@ -18,11 +18,10 @@
     </script>
     <canvas id="c"></canvas>
     <script type="module">
-        import * as CANNON from 'cannon';
+        import * as CANNON from './cannon.min.js';
         import * as THREE from 'three';
         import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
 
-        const { World, Body, Box, Plane, Vec3 } = CANNON;
         const canvas = document.getElementById("c");
         var world = new CANNON.World();
 
