--- a/index.html
+++ b/index.html
@@ -18,145 +18,77 @@
     </script>
     <canvas id="c"></canvas>
     <script type="module">
-        import * as CANNON from './cannon.min.js';
         import * as THREE from 'three';
         import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
 
         const canvas = document.getElementById("c");
-        var world = new CANNON.World();
 
+        // Three.js setup
+const scene = new THREE.Scene();
+const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+const renderer = new THREE.WebGLRenderer();
+renderer.setSize({ canvas });
+document.body.appendChild(renderer.domElement);
 
-        // Create the ground as a PlaneBufferGeometry with a MeshBasicMaterial
-        var groundGeometry = new THREE.PlaneGeometry(10, 10);
-        var groundMaterial = new THREE.MeshBasicMaterial({ color: 0x00ff00 });
-        var ground = new THREE.Mesh(groundGeometry, groundMaterial);
+// Player
+const playerGeometry = new THREE.BoxGeometry(1, 1, 1);
+const playerMaterial = new THREE.MeshBasicMaterial({ color: 0x00ff00 });
+const player = new THREE.Mesh(playerGeometry, playerMaterial);
+scene.add(player);
 
-        // Rotate and position the ground
-        ground.rotation.x = -Math.PI / 2;
-        ground.position.y = -0.5;
+// Enemy
+const enemyGeometry = new THREE.BoxGeometry(1, 1, 1);
+const enemyMaterial = new THREE.MeshBasicMaterial({ color: 0xff0000 });
+const enemy = new THREE.Mesh(enemyGeometry, enemyMaterial);
+enemy.position.x = 3;
+scene.add(enemy);
 
-        var characterGeometry = new THREE.BoxGeometry(1, 1, 1)
-        var characterMaterial = new THREE.MeshBasicMaterial({ transparent: true, color: 0xff0000 });
-        var character = new THREE.Mesh(characterGeometry, characterMaterial);
+// Render loop
+const render = function() {
+  requestAnimationFrame(render);
 
-        character.position.set(0, 0, 0);
-        character.opacity = 0;
+  // Move player based on user input
+  if (input.left) {
+    player.position.x -= 0.1;
+  }
+  if (input.right) {
+    player.position.x += 0.1;
+  }
+  if (input.up) {
+    player.position.z -= 0.1;
+  }
+  if (input.down) {
+    player.position.z += 0.1;
+  }
 
-        // Create a sprite using a texture
-        var spriteMap = new THREE.TextureLoader().load("haamu.png");
-        var spriteMaterial = new THREE.SpriteMaterial({ map: spriteMap });
-        var sprite = new THREE.Sprite(spriteMaterial);
+  renderer.render(scene, camera);
+};
 
-        sprite.position.set(0, 5, 0);
-        // Scale the sprite
-        sprite.scale.set(10, 10, 1);
+// Handle user input
+const input = {
+  left: false,
+  right: false,
+  up: false,
+  down: false
+};
+document.addEventListener("keydown", event => {
+  if (event.keyCode === 37) input.left = true;
+  if (event.keyCode === 38) input.up = true;
+  if (event.keyCode === 39) input.right = true;
+  if (event.keyCode === 40) input.down = true;
+});
+document.addEventListener("keyup", event => {
+  if (event.keyCode === 37) input.left = false;
+  if (event.keyCode === 38) input.up = false;
+  if (event.keyCode === 39) input.right = false;
+  if (event.keyCode === 40) input.down = false;
+});
 
-        sprite.material.opacity = 1;
-
-        // Add the sprite as a child of the cube
-        character.add(sprite);
-
-        var camera = new THREE.PerspectiveCamera(120, window.innerWidth / window.innerHeight, 0.1, 1000);
-        camera.position.set(10, 10, 10);
-        camera.lookAt(character.position);
-
-        var renderer = new THREE.WebGLRenderer({canvas});
-        renderer.setSize(canvas.clientWidth, canvas.clientHeight);
-        renderer.setRenderTarget(canvas);
-        document.body.appendChild(renderer.domElement);
-
-        var controls = new THREE.OrbitControls( camera, canvas );
-
-        var scene = new THREE.Scene();
-        scene.add(character);
-        scene.add(camera);
-
-        // Add the ground to the scene
-        scene.add(ground);
-
-        // Create a physics body for the ground
-        var groundBody = new CANNON.Body({
-            mass: 0, // mass of 0 makes it immovable
-            position: new CANNON.Vec3(0, -0.5, 0), // position it at the bottom of the scene
-            shape: new CANNON.Plane()
-        });
-        world.addBody(groundBody);
-
-
-        // Create a physics body for the character
-        var characterBody = new CANNON.Body({
-            mass: 1, // 1 kg
-            position: new CANNON.Vec3(0, 0, 0),
-            shape: new CANNON.Box(new CANNON.Vec3(0.5, 0.5, 0.5))
-        });
-        world.addBody(characterBody);
-        world.addBody(groundBody);
-
-        var contactMaterial = new CANNON.ContactMaterial(groundMaterial, characterMaterial, {
-            friction: 0.01,
-            restitution: 0.3,
-            contactEquationStiffness: 1e8,
-            contactEquationRelaxation: 3,
-            frictionEquationStiffness: 1e8,
-            frictionEquationRegularizationTime: 3
-        });
-        world.addContactMaterial(contactMaterial);
-
-        // Create a constraint to keep the character on the ground
-        var characterGroundConstraint = new CANNON.LockConstraint(characterBody, groundBody);
-        world.addConstraint(characterGroundConstraint);
-
-        var force = new CANNON.Vec3(); // force vector
-        var forceDirection = new CANNON.Vec3(); // force direction
-
-        document.addEventListener("keydown", onDocumentKeyDown, false);
-        document.addEventListener("keyup", onDocumentKeyUp, false);
-
-        const movementSpeed = 0.001;
-
-        function onDocumentKeyDown(event) {
-            var keyCode = event.which;
-            if (keyCode == 87) {
-                // W key
-                forceDirection.set(0, 0, -1); // set the force direction
-            } else if (keyCode == 83) {
-                // S key
-                forceDirection.set(0, 0, 1); // set the force direction
-            } else if (keyCode == 65) {
-                // A key
-                forceDirection.set(-1, 0, 0); // set the force direction
-            } else if (keyCode == 68) {
-                // D key
-                forceDirection.set(1, 0, 0); // set the force direction
-            }
-            force.copy(forceDirection.scale(movementSpeed)); // set the force
-            characterBody.applyLocalForce(force, new CANNON.Vec3()); // apply the
-        }
-        function onDocumentKeyUp(event) {
-            forceDirection.set(0, 0, 0);
-            force.set(0, 0, 0);
-        }
+// Start render loop
+render();
 
 
 
-        var timeStep = (1 / 60);
-
-        function render() {
-            world.step(timeStep);
-            requestAnimationFrame(render);
-            character.position.copy(characterBody.position);
-            character.quaternion.copy(characterBody.quaternion);
-            renderer.render(scene, camera);
-
-            controls.update();
-        }
-
-        render();
-
-        function cleanup() {
-            world.remove(groundBody);
-            world.remove(characterBody);
-        }
     </script>
 </body>
 
