--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         sprite.material.opacity = 1;
 
         // Add the sprite as a child of the cube
-        playadd(sprite);
+        player.add(sprite);
 
 
         // Enemy
