--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
         enemy.position.x = 3;
         scene.add(enemy);
 
+        const light = new THREE.PointLight(0xFFFFFF);
+        light.position.set(-10, 10, 10);
+        scene.add(light);
+
         // Render loop
         const render = function () {
             requestAnimationFrame(render);
