--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
         enemy.position.x = 3;
         scene.add(enemy);
 
-        const light = new THREE.AmbientLight(0xFFFFFF);
-        light.position.set(-10, 10, 10);
+        const light = new THREE.AmbientLight(0x404040);
         scene.add(light);
 
         // Render loop
