--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 
         // Three.js setup
         const scene = new THREE.Scene();
-        const camera = new THREE.PerspectiveCamera(120, window.innerWidth / window.innerHeight, 0.1, 1000);
-        camera.position.set(10, 10, 10);
+        const camera = new THREE.PerspectiveCamera(80, window.innerWidth / window.innerHeight, 0.1, 1000);
+
+
         const renderer = new THREE.WebGLRenderer();
         renderer.setSize(window.innerWidth, window.innerHeight);
         document.body.appendChild(renderer.domElement);
@@ -35,7 +36,7 @@
         const playerMaterial = new THREE.MeshBasicMaterial({ color: 0x00ff00 });
         const player = new THREE.Mesh(playerGeometry, playerMaterial);
         scene.add(player);
-        camera.lookAt(player);
+        camera.lookAt(player.position);
 
         // Create a sprite using a texture
         var spriteMap = new THREE.TextureLoader().load("haamu.png");
@@ -46,7 +47,7 @@
         sprite.position.set(0, 0.5, 0);
 
         // Scale the sprite
-        sprite.scale.set(10, 10, 1);
+        sprite.scale.set(5, 5, 1);
 
         // make the sprite visible 
         sprite.material.opacity = 1;
@@ -65,6 +66,10 @@
         const light = new THREE.AmbientLight(0x404040);
         scene.add(light);
 
+        const size = 10;
+        const divisions = 10;
+        const gridHelper = new THREE.GridHelper(size, divisions);
+        scene.add(gridHelper);
 
         // Handle user input
         const input = {
@@ -106,7 +111,20 @@
             }
 
             renderer.render(scene, camera);
+
+            // Update the camera's position and rotation to match the player's position and rotation
+            camera.position.x = player.position.x;
+            camera.position.z = player.position.z;
+            camera.position.y = player.position.y + 10;
+
+
+            // Keep isometric angle
+            camera.rotation.x = -45;
+            camera.rotation.y = 0;
+            camera.rotation.z = 0;
+
         };
+
 
         // Start render loop
         render();
