--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         enemySprite.scale.set(1, 1, 1);
         
         // make the sprite visible 
-        enemySprite.material.opacity = 1;
+        //enemySprite.material.opacity = 1;
 
         enemy.add(enemySprite);
 
@@ -108,6 +108,44 @@
             if (event.keyCode === 38) input.up = false;
             if (event.keyCode === 39) input.right = false;
             if (event.keyCode === 40) input.down = false;
+        });
+
+
+
+        let touchStartX = 0;
+        let touchStartY = 0;
+        let touchEndX = 0;
+        let touchEndY = 0;
+
+        document.addEventListener("touchstart", (event) => {
+        touchStartX = event.touches[0].clientX;
+        touchStartY = event.touches[0].clientY;
+        });
+
+        document.addEventListener("touchmove", (event) => {
+        touchEndX = event.touches[0].clientX;
+        touchEndY = event.touches[0].clientY;
+        });
+
+        document.addEventListener("touchend", (event) => {
+        // Check if the touch was a swipe
+        if (Math.abs(touchStartX - touchEndX) > 50) {
+            if (touchStartX > touchEndX) {
+            // Swipe left
+            input.left = true;
+            } else {
+            // Swipe right
+            input.right = true;
+            }
+        } else if (Math.abs(touchStartY - touchEndY) > 50) {
+            if (touchStartY > touchEndY) {
+            // Swipe up
+            input.up = true;
+            } else {
+            // Swipe down
+            input.down = true;
+            }
+        }
         });
 
 
