--- a/index.html
+++ b/index.html
@@ -110,44 +110,31 @@
             if (event.keyCode === 40) input.down = false;
         });
 
+            let joystick = {
+            x: 0,
+            y: 0
+            };
 
+            const joystickRadius = 100;
 
-        let touchStartX = 0;
-        let touchStartY = 0;
-        let touchEndX = 0;
-        let touchEndY = 0;
+            document.addEventListener("touchmove", (event) => {
+            let touchX = event.touches[0].clientX;
+            let touchY = event.touches[0].clientY;
 
-        document.addEventListener("touchstart", (event) => {
-        touchStartX = event.touches[0].clientX;
-        touchStartY = event.touches[0].clientY;
-        });
+            // Normalize the joystick position to be between -1 and 1
+            joystick.x = (touchX - window.innerWidth / 2) / joystickRadius;
+            joystick.y = (touchY - window.innerHeight / 2) / joystickRadius;
 
-        document.addEventListener("touchmove", (event) => {
-        touchEndX = event.touches[0].clientX;
-        touchEndY = event.touches[0].clientY;
-        });
+// Clamp the joystick position to the edges of the joystick area
+joystick.x = Math.min(Math.max(joystick.x, -1), 1);
+joystick.y = Math.min(Math.max(joystick.y, -1), 1);
 
-        document.addEventListener("touchend", (event) => {
-        // Check if the touch was a swipe
-        if (Math.abs(touchStartX - touchEndX) > 50) {
-            if (touchStartX > touchEndX) {
-            // Swipe left
-            input.left = true;
-            } else {
-            // Swipe right
-            input.right = true;
-            }
-        } else if (Math.abs(touchStartY - touchEndY) > 50) {
-            if (touchStartY > touchEndY) {
-            // Swipe up
-            input.up = true;
-            } else {
-            // Swipe down
-            input.down = true;
-            }
-        }
-        });
+// Map the joystick position to player movement
+player.position.x += joystick.x * playerSpeed;
+player.position.y += joystick.y * playerSpeed;
+});
 
+                
 
         // Render loop
         const render = function () {
