--- a/index.html
+++ b/index.html
@@ -4,8 +4,23 @@
 <head>
     <title>My Three.js Project</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link id="touch-icon" rel="apple-touch-icon" href="touch-icon.png">
+    <div id="touch-icon"></div>
+    <style>
+        #touch-icon {
+        position: absolute;
+        bottom: 20px;
+        right: 20px;
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        background-color: #ddd;
+        transition: all 0.2s;
+        }
 
+        #touch-icon:active {
+        transform: scale(0.9);
+        }
+    </style>
 
 </head>
 
