--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
         import { OrbitControls } from 'three/addons/controls/OrbitControls.js';
 
 
-
         // Three.js setup
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera(60, window.innerWidth / window.innerHeight, 0.1, 1000);
@@ -129,40 +128,59 @@
             if (event.keyCode === 40) input.down = false;
         });
 
-        let joystick = {
-            x: 0,
-            y: 0
-        };
+// Get the knob element
+const knob = document.getElementById("touch-icon");
 
-// Get a reference to the touch icon element
-const touchIcon = document.querySelector("#touch-icon");
+// Initialize some variables to track the touch position
+let startX = 0;
+let startY = 0;
+let moveX = 0;
+let moveY = 0;
+let directionX = 0;
+let directionY = 0;
 
+// Add a touchstart event listener to the knob
+knob.addEventListener("touchstart", function(event) {
+  // Get the starting position of the touch
+  startX = event.touches[0].clientX;
+  startY = event.touches[0].clientY;
+});
 
-// Get the center of the touch icon
-const iconCenter = {
-  x: touchIcon.offsetLeft + touchIcon.offsetWidth / 2,
-  y: touchIcon.offsetTop + touchIcon.offsetHeight / 2
-};
+// Add a touchmove event listener to the knob
+knob.addEventListener("touchmove", function(event) {
+  // Get the current position of the touch
+  moveX = event.touches[0].clientX;
+  moveY = event.touches[0].clientY;
 
-// Add a touch start event listener to the touch icon
-touchIcon.addEventListener("touchstart", event => {
-  // Get the initial x and y coordinates of the touch
-  const initialX = event.touches[0].clientX;
-  const initialY = event.touches[0].clientY;
+  // Calculate the direction of the touch movement
+  directionX = moveX - startX;
+  directionY = moveY - startY;
 
-  // Add a touch move event listener to the touch icon
-  touchIcon.addEventListener("touchmove", event => {
-    // Get the current x and y coordinates of the touch
-    const currentX = event.touches[0].clientX;
-    const currentY = event.touches[0].clientY;
+  // Move the player based on the touch direction
+  if (Math.abs(directionX) > Math.abs(directionY)) {
+    if (directionX > 0) {
+      player.position.x += 0.1;
+    } else {
+      player.position.x -= 0.1;
+    }
+  } else {
+    if (directionY > 0) {
+      player.position.z += 0.1;
+    } else {
+      player.position.z -= 0.1;
+    }
+  }
+});
 
-    // Calculate the angle of the touch in relation to the center of the icon
-    let angle = Math.atan2(currentY - iconCenter.y, currentX - iconCenter.x);
-
-    // Update the position of the player based on the angle
-    player.position.x += Math.cos(angle) * 0.1;
-    player.position.z += Math.sin(angle) * 0.1;
-  });
+// Add a touchend event listener to the knob
+knob.addEventListener("touchend", function(event) {
+  // Reset the touch position variables
+  startX = 0;
+  startY = 0;
+  moveX = 0;
+  moveY = 0;
+  directionX = 0;
+  directionY = 0;
 });
 
 
