--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <div id="touch-icon"></div>
     <style>
         #touch-icon {
-        position: absolute;
-        bottom: 20px;
-        right: 20px;
-        width: 100px;
-        height: 100px;
-        border-radius: 50%;
-        background-color: #ddd;
-        transition: all 0.2s;
+            position: absolute;
+            bottom: 20px;
+            right: 20px;
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            background-color: #ddd;
+            transition: all 0.2s;
         }
 
         #touch-icon:active {
-        transform: scale(0.9);
+            transform: scale(0.9);
         }
     </style>
 
@@ -59,7 +59,7 @@
 
 
         // Create a sprite using a texture
-        var spriteMap = new THREE.TextureLoader().load("haamu.png");
+        var spriteMap = new THREE.TextureLoader().load("/png/haamu.png");
         var spriteMaterial = new THREE.SpriteMaterial({ map: spriteMap });
         var sprite = new THREE.Sprite(spriteMaterial);
 
@@ -84,7 +84,7 @@
         enemy.position.x = 3;
         scene.add(enemy);
 
-        var enemySpriteMap = new THREE.TextureLoader().load("enemy.png");
+        var enemySpriteMap = new THREE.TextureLoader().load("/png/enemy.png");
         var enemySpriteMaterial = new THREE.SpriteMaterial({ map: enemySpriteMap });
         var enemySprite = new THREE.Sprite(enemySpriteMaterial);
 
@@ -108,6 +108,32 @@
         scene.add(gridHelper);
 
 
+        const treeGeometry = new THREE.PlaneGeometry(1, 1);
+        const treeMaterial = new THREE.MeshBasicMaterial({ transparent: true, color: 0xff0000 });
+        treeMaterial.opacity = 0;
+        const tree = new THREE.Mesh(treeGeometry, treeMaterial);
+        scene.add(tree);
+
+
+        // Load the image for the tree sprite
+        const treeSpriteMap = new THREE.TextureLoader().load("/png/tree.png");
+
+        // Create a new material for the tree sprite using the image
+        const treeSpriteMaterial = new THREE.SpriteMaterial({ map: treeSpriteMap });
+
+        // Create a new sprite using the material
+        const treeSprite = new THREE.Sprite(treeSpriteMaterial);
+
+        // Position the tree sprite in the scene
+        treeSprite.position.set(0, 0.5, 0);
+
+        // Scale the tree sprite
+        treeSprite.scale.set(4, 4, 1);
+
+        // Add the tree sprite to the scene
+        tree.add(treeSprite);
+
+
         // Handle user input
         const input = {
             left: false,
@@ -128,60 +154,60 @@
             if (event.keyCode === 40) input.down = false;
         });
 
-// Get the knob element
-const knob = document.getElementById("touch-icon");
+        // Get the knob element
+        const knob = document.getElementById("touch-icon");
 
-// Initialize some variables to track the touch position
-let startX = 0;
-let startY = 0;
-let moveX = 0;
-let moveY = 0;
-let directionX = 0;
-let directionY = 0;
+        // Initialize some variables to track the touch position
+        let startX = 0;
+        let startY = 0;
+        let moveX = 0;
+        let moveY = 0;
+        let directionX = 0;
+        let directionY = 0;
 
-// Add a touchstart event listener to the knob
-knob.addEventListener("touchstart", function(event) {
-  // Get the starting position of the touch
-  startX = event.touches[0].clientX;
-  startY = event.touches[0].clientY;
-});
+        // Add a touchstart event listener to the knob
+        knob.addEventListener("touchstart", function (event) {
+            // Get the starting position of the touch
+            startX = event.touches[0].clientX;
+            startY = event.touches[0].clientY;
+        });
 
-// Add a touchmove event listener to the knob
-knob.addEventListener("touchmove", function(event) {
-  // Get the current position of the touch
-  moveX = event.touches[0].clientX;
-  moveY = event.touches[0].clientY;
+        // Add a touchmove event listener to the knob
+        knob.addEventListener("touchmove", function (event) {
+            // Get the current position of the touch
+            moveX = event.touches[0].clientX;
+            moveY = event.touches[0].clientY;
 
-  // Calculate the direction of the touch movement
-  directionX = moveX - startX;
-  directionY = moveY - startY;
+            // Calculate the direction of the touch movement
+            directionX = moveX - startX;
+            directionY = moveY - startY;
 
-  // Move the player based on the touch direction
-  if (Math.abs(directionX) > Math.abs(directionY)) {
-    if (directionX > 0) {
-      player.position.x += 0.1;
-    } else {
-      player.position.x -= 0.1;
-    }
-  } else {
-    if (directionY > 0) {
-      player.position.z += 0.1;
-    } else {
-      player.position.z -= 0.1;
-    }
-  }
-});
+            // Move the player based on the touch direction
+            if (Math.abs(directionX) > Math.abs(directionY)) {
+                if (directionX > 0) {
+                    player.position.x += 0.1;
+                } else {
+                    player.position.x -= 0.1;
+                }
+            } else {
+                if (directionY > 0) {
+                    player.position.z += 0.1;
+                } else {
+                    player.position.z -= 0.1;
+                }
+            }
+        });
 
-// Add a touchend event listener to the knob
-knob.addEventListener("touchend", function(event) {
-  // Reset the touch position variables
-  startX = 0;
-  startY = 0;
-  moveX = 0;
-  moveY = 0;
-  directionX = 0;
-  directionY = 0;
-});
+        // Add a touchend event listener to the knob
+        knob.addEventListener("touchend", function (event) {
+            // Reset the touch position variables
+            startX = 0;
+            startY = 0;
+            moveX = 0;
+            moveY = 0;
+            directionX = 0;
+            directionY = 0;
+        });
 
 
         // Render loop
