--- a/index.html
+++ b/index.html
@@ -377,6 +377,7 @@
             moveY = 0;
             directionX = 0;
             directionY = 0;
+            player.currentState = player.states.IDLE;
         });
 
 
