--- a/index.html
+++ b/index.html
@@ -137,16 +137,15 @@ body {
                     // Move the player based on the touch direction
                     if (Math.abs(directionX) > Math.abs(directionY)) {
                         if (directionX > 0) {
-                            this.input.left = true
+                            this.input.left = true;
                         } else {
-                            this.input.right = true
+                            this.input.right = true;
                         }
-                    } else {
-                        if (directionY > 0) {
-                            this.input.up = true
-
                         } else {
-                            this.input.down = true
+                        if (directionY > 0) {
+                            this.input.up = true;
+                        } else {
+                            this.input.down = true;
 
                         }
                     }
