--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ body {
             // Reset the touch position variables
 
 
-
+            this.input = false;
 
             startX = 0;
             startY = 0;
