--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ body {
             moveY = 0;
             directionX = 0;
             directionY = 0;
-            player.currentState = player.states.IDLE;
+            this.player.currentState = this.player.states.IDLE;
         });
 
             }
