--- a/index.html
+++ b/index.html
@@ -158,7 +158,10 @@
                     // Reset the touch position variables
 
 
-                    this.input = false;
+                    this.input.left = false;
+                    this.input.right = false;
+                    this.input.up = false;
+                    this.input.down = false;
 
                     startX = 0;
                     startY = 0;
