--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
                         }
                     }
-                });
+                }.bind(this));
 
 
                 // Add a touchend event listener to the knob
