--- a/index.html
+++ b/index.html
@@ -16,10 +16,37 @@
             margin: 0;
             padding: 0;
         }
+mobile-controls {
+        position: absolute;
+        bottom: 10px;
+        left: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        z-index: 1; /* Ensure it's above the game canvas */
+    }
+
+    button {
+        margin: 5px;
+        padding: 10px;
+        font-size: 16px;
+        background-color: #333;
+        color: #fff;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+    }
     </style>
 </head>
 
 <body>
+<div id="mobile-controls">
+    <button id="left-button">Left</button>
+    <button id="right-button">Right</button>
+    <button id="up-button">Up</button>
+    <button id="down-button">Down</button>
+    <button id="attack-button">Attack</button>
+</div>
     <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cannon.js/0.6.2/cannon.min.js"></script>
 
@@ -656,6 +683,33 @@
 
         // Start render loop
         render();
+
+const leftButton = document.getElementById('left-button');
+    const rightButton = document.getElementById('right-button');
+    const upButton = document.getElementById('up-button');
+    const downButton = document.getElementById('down-button');
+    const attackButton = document.getElementById('attack-button');
+
+    // Add event listeners to the buttons
+    leftButton.addEventListener('touchstart', () => {
+        // Handle left button press
+        gameManager.player.input.left = true;
+    });
+
+    leftButton.addEventListener('touchend', () => {
+        // Handle left button release
+        gameManager.player.input.left = false;
+    });
+
+    // Repeat the same pattern for other buttons (right, up, down, attack)
+    // ...
+
+    // Prevent default touch events to avoid scrolling
+    document.body.addEventListener('touchmove', (e) => {
+        e.preventDefault();
+    });
+
+
 
     </script>
 </body>
