--- a/index.html
+++ b/index.html
@@ -749,25 +749,34 @@ joystick.container.addEventListener('touchstart', (e) => {
     updateJoystickPosition(e.touches[0]);
 });
 
-// Add event listener for touch move on joystick container
+// Modify the touchmove event listener as follows
 joystick.container.addEventListener('touchmove', (e) => {
     e.preventDefault();
     const touch = e.touches[0];
     const deltaX = touch.clientX - joystick.centerX;
     const deltaY = touch.clientY - joystick.centerY;
 
-    // Calculate the joystick angle and magnitude
+    // Calculate the joystick angle
     const angle = Math.atan2(deltaY, deltaX);
-    const magnitude = Math.min(joystick.radius, Math.sqrt(deltaX * deltaX + deltaY * deltaY));
 
-    // Convert angle and magnitude to movement input
+    // Calculate the joystick magnitude and direction
+    const magnitude = Math.min(joystick.radius, Math.sqrt(deltaX * deltaX + deltaY * deltaY));
+    let directionX = Math.cos(angle);
+    let directionY = Math.sin(angle);
+
+    // Normalize the direction vector
+    const magnitudeFactor = magnitude / joystick.radius;
+    directionX *= magnitudeFactor;
+    directionY *= magnitudeFactor;
+
+    // Convert directionX and directionY to movement input
     const speed = 0.5; // Adjust the speed to your desired value
-    gameManager.player.input.left = Math.cos(angle) * (magnitude / joystick.radius) * speed;
-    gameManager.player.input.up = Math.sin(angle) * (magnitude / joystick.radius) * speed;
+    gameManager.player.input.left = directionX * speed;
+    gameManager.player.input.up = -directionY * speed; // Invert the Y-axis for correct movement
 
     // Move the joystick knob based on the touch position
-    joystick.knob.style.left = `${(magnitude * Math.cos(angle)) + joystick.centerX}px`;
-    joystick.knob.style.top = `${(magnitude * Math.sin(angle)) + joystick.centerY}px`;
+    joystick.knob.style.left = `${(directionX * joystick.radius) + joystick.centerX}px`;
+    joystick.knob.style.top = `${(-directionY * joystick.radius) + joystick.centerY}px`;
 });
 
 // Add event listener for touch end on joystick container
